--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             
             <div class="score-board">
 
-                <div class="user-display">
-                    <i class="far fa-hand-rock"></i>
+                <div id="display-left" class="user-display">
+                    <span></span>
                     <p>You</p>
                 </div>
                 
@@ -26,8 +26,8 @@
                     <span id="user-score">0</span> : <span class="" id="computer-score">0</span>
                 </div>
 
-                <div class="user-display">
-                    <i class="far fa-hand-paper"></i>
+                <div id="display-right" class="user-display">
+                    <span></span>
                     <p>Computer</p>
                 </div>
             </div>
